--- a/MNServer/Views/BirthRegist/BirthRegistration.cshtml
+++ b/MNServer/Views/BirthRegist/BirthRegistration.cshtml
@@ -212,7 +212,7 @@
                                         <div id="DivDummy" class="col-md-2 "></div>
                                         <div class="form-group col-md-5">
                                             Address
-
+                                          
                                             @Html.TextAreaFor(m => m.CustomerAddress, new { placeholder = " Address", @class = "form-control" })
 
 
@@ -370,11 +370,11 @@
 
                                             <tr>
                                                 <td style="width:250px">
-                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @multiple = "multiple", @class = "form-control", @readonly = "readonly" })
+                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new {  @class = "form-control", @readonly = "readonly" })
                                                 </td>
                                                 <td>
 
-                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @type = "file", @name = "filePost", @class = "form-control" })
+                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @multiple = "multiple", @type = "file", @name = "filePost", @class = "form-control" })
                                                 </td>
                                             </tr>
 
@@ -383,10 +383,11 @@
                                         {
                                             <tr>
                                                 <td style="width:250px">
-                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { name = "filePost1", @class = "form -control", @readonly = "readonly" })
+                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @class = "form-control", @readonly = "readonly" })
+                                                    @*@Html.TextBoxFor(m => m.DocList[i].Docname, new { @multiple = "multiple",name = "filePost1", @class = "form -control", @readonly = "readonly" })*@
                                                 </td>
                                                 <td style="width:220px">
-                                                    @Html.DropDownListFor(m => m.DocList[i].Doctype, sl, new { @name = "filePost2", @class = "form-control" })
+                                                    @Html.DropDownListFor(m => m.DocList[i].Doctype, sl, new {@name = "filePost2", @class = "form-control" })
                                                 </td>
                                                 <td>
                                                     @Html.TextBoxFor(m => m.DocList[i].Docname, new { @type = "file", @name = "filePost", @class = "form -control" })
