--- a/MNServer/Views/Dashboard/Rejection.cshtml
+++ b/MNServer/Views/Dashboard/Rejection.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        @using (Html.BeginForm("AddClarification", "Dashboard", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("AddRejection", "Dashboard", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             {
                 for (int i = 0; i < Model.RegistrationForm.Count; i++)
@@ -55,6 +55,7 @@
                                 else
                                 {
                                     @Html.TextBoxFor(m => m.RegistrationForm[i].BnDType, new { style = "display: none;" })
+                                    @Html.TextBoxFor(m => m.RegistrationForm[i].ID, new { style = "display: none;" })
                                     <div class="col-md-12 input-group DivMargin  ">
                                         <div id="DivDummy" class="col-md-0 "></div>
                                         <div class="form-group col-md-5">
@@ -329,17 +330,7 @@
             if (Model.Attaken.viewIdentityDocument.Count.Equals(0) || Model.Attaken.viewIdentityDocument == null)
             {
                 <div class="panel panel-body panel-heading col-md-8" style=" border: 2px groove #ddd !important; border-radius: 7px;margin-left:17%; display:none">
-                    @*----------Display comments------------------*@
 
-                    <Table style="width: 300px; visibility:hidden" cellpadding="0" cellspacing="0">
-                        <tr>
-                            <th>
-                                Comments
-                            </th>
-
-                        <tr>
-
-                    </Table>
                 </div>
 
             }
@@ -380,21 +371,14 @@
                     </div>
                 }
 
-                @*----------Display BnD Document------------------*@
+                @*---------------------------------------------Display BnD Document-----------------------------------------------------------------------*@
 
                 if (Model.Attaken.viewBnDDocument.Count.Equals(0))
                 {
                     <div class="panel panel-body panel-heading col-md-8" style=" border: 2px groove #ddd !important; border-radius: 7px;margin-left:17%; display:none">
                         @*----------Display comments------------------*@
 
-                        <Table style="width: 300px; visibility:hidden" cellpadding="0" cellspacing="0">
-                            <tr>
-                                <th>
-                                    Comments
-                                </th>
 
-
-                        </Table>
                     </div>
                 }
                 else
@@ -436,80 +420,70 @@
                     }
 
 
-                    @*----------------------------------------------------------Add New Document List -----------------------------------------*@
-                    <hr style="height:12px">
-                    <div>
-                        <h2>Documents View </h2>
+                    <div class="panel panel-body panel-heading col-md-12" style=" border: 2px groove #ddd !important; border-radius: 7px;margin-left:17%;">
+                        @*------------------------------------------------Display comments-----------------------------------------------------------------------*@
+
+                        <Table style="width: 300px;" cellpadding="0" cellspacing="0">
+                            <tr>
+                                <th>
+                                    Comments
+                                </th>
+                                <th>
+                                    Action
+                                </th>
+                                <th>
+                                    UserName
+                                </th>
+                                <th>
+                                    Datetime
+                                </th>
+                            <tr>
+                                @foreach (var item in Model.Attaken.ShowAllComments)
+                                {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Comments)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Action)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Username)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.DateTime)
+                                    </td>
+                                </tr>
+                            }
+                            </Table>
+                        </div>
+
+                        @*--------------------------------------------------------------comments and Clarificationsbox----------------------------------------------------*@
+                        @Html.TextAreaFor(m => m.Clarification, new { @class = "form-control", @rows = 10, @cols = 40 })
+
+                        @*--------------------------------------------------------------Add New Document List --------------------------------------------------------------*@
+
+                        <h2>Documents </h2>
                         <table id="TblDocuments" class="panel panel-body panel-heading col-md-12" style="width:auto; " cellpadding="8" cellspacing="8">
                             <tbody>
-                                @{
-                                    string s = null;
-                                    string[] sa = null;
-                                    var docList = Model.DocList;
-                                    for (int i = 0; i < Model.DocList.Count; i++)
-                                    {
-                                        s = docList[i].Doctype;
+                                <tr>
+                                    <td>
+                                        @Html.TextAreaFor(m => m.AppealDoc.AppealComment, new { @class = "form-control", @rows = 10, @cols = 40 })
+                                    </td>
+                                    <td>
+                                        @Html.TextBoxFor(m => m.AppealDoc.AppealFileName, new { @type = "file", @name = "filePost", @class = "form -control" })
+                                    </td>
+                                </tr>
 
 
-                                        sa = s.Split(new char[] { '|' }, StringSplitOptions.RemoveEmptyEntries);
-                                        List<SelectListItem>
-                                            sl = new List<SelectListItem>
-                                                ();
-                                        foreach (var doctypeinner in sa)
-                                        {
-                                            sl.Add(new SelectListItem { Text = doctypeinner.ToString() });
-                                        }
-
-                                        if (sl.Count <= 0)
-                                        {
-
-                                            <tr>
-                                                <td style="width:250px">
-                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @class = "form-control", @readonly = "readonly" })
-                                                </td>
-                                                <td>
-
-                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @multiple = "multiple", @type = "file", @name = "filePost", @class = "form-control" })
-                                                </td>
-                                            </tr>
-
-                                        }
-                                        else
-                                        {
-                                            <tr>
-                                                <td style="width:250px">
-                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @class = "form-control", @readonly = "readonly" })
-                                                    @*@Html.TextBoxFor(m => m.DocList[i].Docname, new { @multiple = "multiple",name = "filePost1", @class = "form -control", @readonly = "readonly" })*@
-                                                </td>
-                                                <td style="width:220px">
-                                                    @Html.DropDownListFor(m => m.DocList[i].Doctype, sl, new { @name = "filePost2", @class = "form-control" })
-                                                </td>
-                                                <td>
-                                                    @Html.TextBoxFor(m => m.DocList[i].Docname, new { @type = "file", @name = "filePost", @class = "form -control" })
-                                                </td>
-                                            </tr>
-                                        }
-                                    }
-
-
-                                }
                             </tbody>
 
                         </table>
-                    </div>
 
 
-                    @*---------------------------------------All comments and Clarifications---------------------------------------*@
-                    @Html.TextAreaFor(m => m.Clarification, new { @class = "form-control", @rows = 10, @cols = 40 })
-
-
-
-                    @*----------------------------------------------------------save data ----------------------------------------------------*@
-                    <input type="submit" value="Reset" class="btn btn-success" />
-                }
-
-
-
+                        @*----------------------------------------------------------save data ----------------------------------------------------*@
+                        <input type="submit" value="Submit" class="btn btn-success" />
+                    }
 
     </div>
 </body>
